--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -77,9 +77,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path("default_index") }}#about">O nas</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ path("blog_index") }}">Blog</a>
-                </li>
+                {#<li class="nav-item">#}
+                    {#<a class="nav-link" href="{{ path("blog_index") }}">Blog</a>#}
+                {#</li>#}
             </ul>
         </div>
     </nav>
